--- a/features.html
+++ b/features.html
@@ -105,7 +105,12 @@
       <div class="content-container">
         <div class="column-left">
           <h1>DroneLogbook Advantage</h1>
-          <h2 class="sub-header long">DroneLogbook is the leader in providing automated tools for maintaining regulatory compliance for UAV operations. Whether you are a commercial operator, public safety (1st responder) or educational institution we provide the tools to support your operations.</h2>
+          <h2 class="sub-header long">DroneLogbook is the leader in 
+            providing automated tools for maintaining regulatory compliance 
+            for UAV operations. Whether you are a commercial operator, public 
+            safety (first responder), or educational institution, we provide 
+            the tools to support your operations.
+          </h2>
         </div>
       </div>
     </div>
@@ -118,9 +123,16 @@
         <div class="column-left" style="width: 100%;">
           <div class="content-header">Fleet Management</div>
           <div class="content-sub-header" style="max-width: none;">
-            DroneLogbook provides our users with a detailed fleet management suite. The fleet management module allows for creating inspection schedules (scheduled drone inspections) and a maintenance module which allows for unscheduled events and follow up. These two modules are linked to allow the user the option of updating the inspection schedule for maintenance items.
-            <br /><br />The DroneLogbook inspection and maintenance modules are automatically updated with each flight entered. When the user enters flights via our automated log file importers the inspection schedules are updated immediately.
-            <br /><br /><b>Our system provides users with the following features:</b><br />
+            DroneLogbook provides our users with a detailed fleet management suite. The fleet management module allows for 
+            creating inspection schedules (scheduled drone inspections) and a 
+            maintenance module which allows for unscheduled events and follow up. 
+            These two modules are linked to allow the user the option of updating the inspection schedule for maintenance items. 
+            <br><br>
+            The DroneLogbook Inspection and Maintenance modules are 
+            automatically updated with each flight entered. When the user 
+            enters flights via our automated log file importers, the inspection schedules are updated immediately.
+            <br><br>
+            <b>Our system provides users with the following features:</b><br />
           </div>
 
           <div style="align-items: baseline; display: flex; justify-content: space-between; flex-wrap: wrap;">
@@ -128,12 +140,12 @@
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
               <br /><b>Private Label</b>
               <ul>
-                <li>Customizable drone component lists (Motors, Propellers (CW, CCW), ESC’s etc...)</li>
+                <li>Customizable drone component lists (Motors, Propellers (CW, CCW), ESCs, etc.)</li>
                 <li>Customizable equipment list (Camera’s, Gimbles, Lidar, Battery Chargers, Cases, etc...)</li>
                 <li>(Optional) Automatically flag flights where user operated a drone with overdue inspection</li>
                 <li>(Optional) Automatically move a drone into maintenance (non operational) if overdue for inspection</li>
-                <li>(Optional) Automatically flag batteries after X flights (user defined)</li>
-                <li>(Optional) Flag user when components or drone hull is overdue, 10 percent or 20 percent before drone / parts become overdue for inspection / maintenance follow up</li>
+                <li>(Optional) Automatically flag batteries after X flights (user-defined)</li>
+                <li>(Optional) Flag user when components or drone hull is overdue, 10 percent or 20 percent before drone/parts become overdue for inspection/maintenance follow-up.</li>
                 <li>And more than 20 other notifications...</li>
               </ul>
             </div>
@@ -161,8 +173,12 @@
         <div class="column-left" style="width: 100%;">
           <div class="content-header">Workflow Advantage</div>
           <div class="content-sub-header" style="max-width: none;">
-            DroneLogbook works by importing flight logs via automated or manual telemetry importation or non-telemetry flight logging (see our Drone Integration Hub for details by drone manufacturer) and then automatically tabulating the flight information against the following fields:
-            <br /><br /><b>Asset:</b> Drone, Drone subcomponents, Batteries, Equipment. <b>Operations:</b> Mission Type, Operations Type, Operation Approval Type, Incidents, Personnel by Role. <b>Organization:</b> Organization ID, Project, Customer, Location.
+            DroneLogbook works by importing flight logs via automated or manual telemetry importation or 
+            non-telemetry flight logging (see our Drone Integration Hub for details by drone manufacturer) and then automatically tabulating the flight information against the following fields:
+            <br><br>
+            <b>Asset:</b> Drone, Drone subcomponents, Batteries, Equipment. 
+            <b>Operations:</b> Mission Type, Operations Type, Operation Approval Type, Incidents, Personnel by Role. 
+            <b>Organization:</b> Organization ID, Project, Customer, Location.
 
             <br /><br />
             For flight log importing we support telemetry from all the major suppliers DJI, Pixhawk, Auterion including their ground control applications such as all the major DJI ground stations (DJI Go, DJI Go 4, DJI Pilot, etc..),DroneHarmony, Dronelink, UGCS, Maps Made Easy, Autel, Parrot, SenseFly, Wingtra, Ardupilot (Mission Planner), Q Ground Control and many more.
