--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="column-left">
           <h1>Drone Operations Compliance <br />& Fleet Management Made Easy</h1>
           <h2 class="sub-header">
-            DroneLogbook brings all your drone-operations workflows into a single,
+            DroneLogbook brings all your drone operations workflows into a single,
             powerful, scalable platform. Easily track personal currency, 
             manage UAV fleets, and plan, execute, and document missions with consistent accuracy and control.
             <br /><br />With support for <b>80+ flight-log and telemetry formats</b>, 
@@ -156,8 +156,10 @@
       <div class="content-container">
         <div class="column-left">
           <div class="content-header">Solutions for Every Industry</div>
-          <div class="content-sub-header">DroneLogbook delivers industry-specific solution that adapt to the unique requirement of commercial UAV operations.
-            Our platform is  scalable, modular, and configrable-ideal for organizations that need flexible and reliable drone-operations sloftware.
+          <div class="content-sub-header">DroneLogbook delivers industry-specific solutions that 
+            adapt to the unique requirements of commercial UAV operations. 
+            Our platform is scalable, modular, and configurable—ideal for organizations that 
+            need flexible and reliable drone-operations software.
           </div>
           <div class="ui-buttons">
             <a href="solutions.html" class="ui-black"><b>Explore our solutions</b></a>
@@ -172,10 +174,11 @@
               and access 3D flight playback. Keep all documentation organized and easily accessible for compliance and reporting needs.</div>
           </div>
           <div class="feature">
-            <div class="feature-header">Manage Inspection and Maintenance</div>
+            <div class="feature-header">Manage Inspections and Maintenance</div>
             <div class="feature-sub-header">Develop inspection schedules aligned with your operational 
-              requirements and receive alerts when inspections or component replacements 
-              are upcoming. Monitor all maintenance activities and maintain a synchronized inspection calendar.
+              requirements and receive alerts when inspections or component replacements are 
+              due (หรือ are approaching). Monitor all maintenance activities and maintain a synchronized 
+              inspection calendar.
             </div>
           </div>
           <div class="feature">
@@ -269,12 +272,11 @@
           <div class="flex-container reversed">
             <div class="module-text">
               <h3>Documentation</h3>
-              <p>With a built-in digital document library, DroneLogbook allows teams to 
-                manage custom checklists, risk assessments, and any additional 
-                uploaded forms. All documentation—digital or scanned—can be 
-                organized and stored centrally for quick access.
+              <p>With a built-in digital document library, DroneLogbook allows teams to manage custom 
+                checklists, risk assessments, and any additional uploaded forms. All documentation—digital 
+                or scanned—can be organized and stored centrally for quick access.
                 <br><br>Generate electronic documentation, including authorization forms and POAs, 
-                and link pre-flight and post-flight records directly to each mission. 
+                and link <b>pre-flight and post-flight</b> records directly to each mission. 
                 Easily track maintenance activity, approve operations, and maintain complete documentation 
                 for every UAV flight.
               </p>
