--- a/innovation.html
+++ b/innovation.html
@@ -101,7 +101,11 @@
       <div class="content-container">
         <div class="column-left">
           <h1>Innovation</h1>
-          <h2 class="sub-header long">DroneLogbook is an industry leader developing tools and flight data importers to improve workflow.<br />Our "Private Label" platform is built to suit large organizations needs.<br />We provide World-wide solutions tailored to each market and local compliance.</h2>
+          <h2 class="sub-header long">DroneLogbook is an industry leader developing 
+            tools and flight data importers to improve the operational workflow. Our 
+            Private-Label platform is built to suit large organizations' needs. We 
+            provide worldwide solutions tailored to each market and local compliance 
+            requirements.</h2>
         </div>
       </div>
     </div>
@@ -123,7 +127,7 @@
           <div class="feature">
             <div class="feature-header">Join Our Supported Platforms List</div>
             <div class="feature-sub-header">
-              <br />If you are a drone, autopilot or ground control (app) developer and want to be integrated into DroneLogbook sent us a note and we are happy to work with you to improve your customers’ workflow.
+              <br />If you are a drone, autopilot or ground control (app) developer and want to be integrated into DroneLogbook, send us a note and we are happy to work with you to improve your customers’ workflow.
               <br /><br /><b>Hardware:</b> DJI, Parrot, Wingtra, SenseFly, Autel, Yuneec, Wingcopter, Vantage Robotics and more.
               <br /><b>Software:</b> UGCS, DroneHarmony, Sky-Drones, Simnet, Zephyr, DroneLink, Flytbase, Q Ground Control, Mission Planner and more.
             </div>
@@ -146,7 +150,14 @@
       <div class="content-container">
         <div class="column-left" style="width: 100%;">
           <div class="content-header">Modular – Configurable</div>
-          <div class="content-sub-header" style="max-width: none;">DroneLogbook provides organizations the opportunity to utilize our “Private Label” platform. This platform provides organizations with the highest level Enterprise tools for flight operations and a detailed administrative panel for operations oversight. The administrator has the ability to set rules, transfer assets and information between groups, message users, receive notifications (if flight / operations parameters exceeded) and more. In addition, we offer the ability (as paid option) to configure the application to suit user needs.
+          <div class="content-sub-header" style="max-width: none;">DroneLogbook provides organizations the opportunity to 
+            utilize our “Private Label” platform. This platform provides organizations 
+            with the highest level Enterprise tools for flight operations and a detailed 
+            administrative panel for operations oversight. The administrator has the ability 
+            to set rules, transfer assets and information between groups, message users, 
+            receive notifications (if flight / operations parameters are exceeded) and more. 
+            In addition, we offer the ability (as a paid option) to configure the application to 
+            suit user needs.
           </div>
           <div class="feature">
             <div class="ui-buttons" style="justify-content: center;">
@@ -164,9 +175,15 @@
       <div class="content-container">
         <div class="column-left" style="width: 100%;">
           <div class="content-header">Global</div>
-          <div class="content-sub-header" style="max-width: none;">DroneLogbook works with partners around the world to provide solutions tailored to each market. These solutions are tailored for both the local compliance needs as well as workflows.
-            <br />Our client’s data is stored on certified servers around the world to provide data security in the local market.
-            <br />Starting in 2021 we will be working to provide native language versions of our platform. Initial supported languages will be French – German – Portuguese – Spanish – Italian. If you are interested in partnering for your local (non English) market feel free to contact us.
+          <div class="content-sub-header" style="max-width: none;">DroneLogbook works with partners around the world to 
+            provide solutions tailored to each market. These solutions are tailored for 
+            both the local compliance needs as well as workflows.
+            <br />Our clients' data is stored on certified servers 
+            around the world to provide data security in the local market.
+            <br />Starting in 2021 we will be working to provide native 
+            language versions of our platform. Initial supported languages will be 
+            French, German, Portuguese, Spanish, and Italian. If you are interested in 
+            partnering or your local (non-English) market feel free to contact us.
           </div>
           <div class="feature">
             <div class="ui-buttons" style="justify-content: center;">
@@ -202,11 +219,15 @@
 
       <div style="padding-left: 40px; padding-right: 10px; padding-top: 40px;">
         <p class="appstore__desc">The DroneLogbook solution is based on a cloud infrastructure with secure data storage, online web application
-          accompanied by our mobile application for offline access and easy synchronization with your cloud based account.
+          accompanied by our mobile application for offline access and easy synchronization with your cloud-based account.
           In addition, the mobile app provides you with access to the latest airspace status updates, local weather and
           solar index reading that might affect your operations.</p>
         <br />
-        <p class="appstore__desc">Another Android mobile application, <b>DLBSync</b>, simplifies import of your flights from major mobile drone flight control apps natively to your DroneLogbook account. This app can sync flights into DLB Sync from your flight control apps when offline or in poor mobile coverage, then upload flights to DroneLogbook account when you have mobile or WIFI coverage.</p>
+        <p class="appstore__desc">Another Android mobile application, <b>DLBSync</b>, 
+          simplifies import of your flights from major mobile drone flight control apps 
+          natively to your DroneLogbook account. This app can sync flights into DLB Sync 
+          from your flight control apps when offline or in poor mobile coverage, then upload 
+          flights to DroneLogbook account when you have mobile or Wi-Fi coverage.</p>
       </div>
 
       <div style="display: flex; padding-left: 20px; padding-right: 20px; align-items: flex-end;">
