--- a/solutions.html
+++ b/solutions.html
@@ -225,13 +225,13 @@
           </span>
           <div class="card-container">
             <div class="card-title">DroneLogbook for Manufacturers</div>
-            <div class="card-desc">IDrone manufacturers can leverage DroneLogbook’s private-label 
+            <div class="card-desc">Drone manufacturers can leverage DroneLogbook’s private-label 
               platform to provide customers with a seamless, branded UAV management 
               and flight-logging solution. Our customizable system lets you deliver 
               full fleet-management capabilities, ensuring continuous engagement 
               throughout the product lifecycle. This gives your customers a superior 
               experience while providing your team with actionable data and insights 
-              into aircraft performance and real-world operation.
+              into aircraft performance and real-world operations.
             </div>
           </div>
         </div>
@@ -257,12 +257,12 @@
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
               <b>What Makes This Platform Different</b><br />
               <br /><b>Flexible Data Structure</b>
-
-              <li>Tailor flight types, equipment lists, and component tracking</li>
-              <li>Build custom inspection forms, mission plans, and operational documents</li>
-              <li>Generate advanced custom reports leveraging every data table</li>
-              <li>Create your own checklists, forms, and risk assessment templates</li>
-              
+              <ul>
+                <li>Tailor flight types, equipment lists, and component tracking</li>
+                <li>Build custom inspection forms, mission plans, and operational documents</li>
+                <li>Generate advanced custom reports leveraging every data table</li>
+                <li>Create your own checklists, forms, and risk assessment templates</li>
+              </ul>
               <br /><b>Operational Control</b>
 
               <li>Organize users into separate divisions with centralized administrative oversight</li>
