--- a/faq.html
+++ b/faq.html
@@ -166,23 +166,34 @@
         <div class="content-sub-header question">
           <strong>What do you do with my data?</strong>
         </div>
-        <div class="content-sub-header answer">We do not sell or distribute your personal data (be it contact information (email), UAV telemetry or other drone
-          and flight data without your permission. We do however look at the types of drones in our system at an aggregate
-          level so that we can better serve our customers with applications for specific drones.</div>
+        <div class="content-sub-header answer">We do not sell or distribute your personal data 
+          (be it contact information, UAV telemetry, or other drone and 
+          flight data) without your permission. We do, however, look at 
+          the types of drones in our system at an aggregate level so that 
+          we can better serve our customers with applications for specific 
+          drones.
+        </div>
 
         <div class="content-header spaced">Product Support</div>
 
         <div class="content-sub-header question">
           <strong>How can I upgrade my DroneLogbook plan?</strong>
         </div>
-        <div class="content-sub-header answer">To upgrade your DroneLogbook plan you need to first cancel your existing plan (if on a paid plan). Once you have
-          cancelled it we will rebate to you the prorated balance of your cancelled plan. You can then upgrade to a new plan.</div>
+        <div class="content-sub-header answer">To upgrade your DroneLogbook plan, you need to 
+          first cancel your existing plan (if on a paid plan). 
+          Once you have cancelled, we will rebate to you the prorated 
+          balance of your cancelled plan. You can then upgrade to a new 
+          plan.
+        </div>
 
         <div class="content-sub-header question">
           <strong>What happens to my data when my subscription expires?</strong>
         </div>
-        <div class="content-sub-header answer">When your subscription expires you will lose access to the functionality of the plan you were on. You do NOT lose
-          your data, just access to the plan features. Once you subscribe again you get access back.</div>
+        <div class="content-sub-header answer">When your subscription expires, you will lose 
+          access to the functionality of the plan you were on. You do 
+          NOT lose your data, just access to the plan features. Once you 
+          subscribe again, you get access back.
+        </div>
 
         <div class="content-sub-header question">
           <strong>How often are new features added?</strong>
@@ -206,7 +217,11 @@
         <div class="content-sub-header question">
           <strong>Can I transfer data between DroneLogbook accounts?</strong>
         </div>
-        <div class="content-sub-header answer">Yes you can transfer your flight data between any DroneLogbook powered site. DroneLogbook, SafetyDrone, Airmarket (Canada), and any of our Private Label Servers. In addition for larger accounts we provide it as a paid service.
+        <div class="content-sub-header answer">Yes, you can transfer your 
+          flight data between any DroneLogbook powered site: DroneLogbook, 
+          SafetyDrone, Airmarket (Canada), and any of our Private-Label 
+          Servers. In addition, for larger accounts, we provide this as 
+          a paid service.
         </div>
 
         <div class="btn-container">
@@ -240,11 +255,17 @@
 
       <div style="padding-left: 40px; padding-right: 10px; padding-top: 40px;">
         <p class="appstore__desc">The DroneLogbook solution is based on a cloud infrastructure with secure data storage, online web application
-          accompanied by our mobile application for offline access and easy synchronization with your cloud based account.
+          accompanied by our mobile application for offline access and easy synchronization with your cloud-based account.
           In addition, the mobile app provides you with access to the latest airspace status updates, local weather and
           solar index reading that might affect your operations.</p>
         <br />
-        <p class="appstore__desc">Another Android mobile application, <b>DLBSync</b>, simplifies import of your flights from major mobile drone flight control apps natively to your DroneLogbook account. This app can sync flights into DLB Sync from your flight control apps when offline or in poor mobile coverage, then upload flights to DroneLogbook account when you have mobile or WIFI coverage.</p>
+        <p class="appstore__desc">Another Android mobile application, 
+          <b>DLBSync</b>, simplifies import of your flights from major 
+          mobile drone flight control apps natively to your DroneLogbook 
+          account. This app can sync flights into DLB Sync from your 
+          flight control apps when offline or in poor mobile coverage, 
+          then upload flights to DroneLogbook account when you have mobile 
+          or Wi-Fi coverage.</p>
       </div>
 
       <div style="display: flex; padding-left: 20px; padding-right: 20px; align-items: flex-end;">
