--- a/partners.html
+++ b/partners.html
@@ -101,10 +101,13 @@
       <div class="content-container">
         <div class="column-left">
           <h1>UAV Industry Integration</h1>
-          <h2 class="sub-header long">DroneLogbook is actively working with partners to provide the tools you need to optimize your drone operations
-            workflow. With our drone log importation tools, API’s and web services we integrate with many of the key UAV
-            hardware and software players. As the UAV industry continues to evolve, we will evolve with it by improving key
-            features and functionality. We recognize that the drone industry isn’t standing still and neither should we.</h2>
+          <h2 class="sub-header long">DroneLogbook is actively working with partners to provide 
+            the tools you need to optimize your drone-operations workflow. 
+            With our drone log importation tools, APIs and web services, we integrate with many 
+            of the key UAV hardware and software players. As the UAV industry continues to 
+            evolve, we will evolve with it by improving key features and functionality. 
+            We recognize that the drone industry isn’t standing still and neither should we.
+          </h2>
         </div>
       </div>
     </div>
@@ -132,9 +135,13 @@
           <div class="card-container">
             <img class="card-logo" src="img-min/drone%20hardware/skydio.jpg" alt="Skydio" loading="lazy">
             <div class="card-title">Skydio</div>
-            <div class="card-desc">Skydio is the leading U.S. drone manufacturer and world leader in autonomous flight.
-              Skydio leverages breakthrough AI to create the world’s most intelligent flying machines for use by consumer, enterprise, and government customers.
-              Skydio designs, assembles, and supports its products in the U.S. from its headquarters in Redwood City, CA, and has been selected as Trusted Drone Provider for U.S. Federal Government as part of the Defense Innovation Unit’s Blue sUAS Project.
+            <div class="card-desc">Skydio is the leading U.S. drone manufacturer and world 
+              leader in autonomous flight. Skydio leverages breakthrough AI to create 
+              the world’s most intelligent flying machines for use by consumer, enterprise, 
+              and government customers. Skydio designs, assembles, and supports its 
+              products in the U.S. from its headquarters in Redwood City, CA, and has been 
+              selected as a Trusted Drone Provider for the U.S. Federal Government as part 
+              of the Defense Innovation Unit’s Blue sUAS Project.
             </div>
           </div>
         </a>
@@ -247,11 +254,16 @@
 
       <div style="padding-left: 40px; padding-right: 10px; padding-top: 40px;">
         <p class="appstore__desc">The DroneLogbook solution is based on a cloud infrastructure with secure data storage, online web application
-          accompanied by our mobile application for offline access and easy synchronization with your cloud based account.
+          accompanied by our mobile application for offline access and easy synchronization with your cloud-based account.
           In addition, the mobile app provides you with access to the latest airspace status updates, local weather and
           solar index reading that might affect your operations.</p>
         <br />
-        <p class="appstore__desc">Another Android mobile application, <b>DLBSync</b>, simplifies import of your flights from major mobile drone flight control apps natively to your DroneLogbook account. This app can sync flights into DLB Sync from your flight control apps when offline or in poor mobile coverage, then upload flights to DroneLogbook account when you have mobile or WIFI coverage.</p>
+        <p class="appstore__desc">Another Android mobile application, <b>DLBSync</b>, simplifies import of 
+          your flights from major mobile drone flight control apps natively to your 
+          DroneLogbook account. This app can sync flights into DLB Sync from your flight 
+          control apps when offline or in poor mobile coverage, then upload flights to 
+          DroneLogbook account when you have mobile or Wi-Fi coverage.
+        </p>
       </div>
 
       <div style="display: flex; padding-left: 20px; padding-right: 20px; align-items: flex-end;">
