--- a/innovation.html
+++ b/innovation.html
@@ -100,12 +100,18 @@
     <div class="page-wrapper">
       <div class="content-container">
         <div class="column-left">
-          <h1>Innovation</h1>
-          <h2 class="sub-header long">DroneLogbook is an industry leader developing 
-            tools and flight data importers to improve the operational workflow. Our 
-            Private-Label platform is built to suit large organizations' needs. We 
-            provide worldwide solutions tailored to each market and local compliance 
-            requirements.</h2>
+          <h1>Innovation in Drone Operations, Compliance & Data</h1>
+          <h2 class="sub-header long">DroneLogbook is continually evolving to make drone operations, 
+            flight logging, and compliance management simpler for commercial, government, and public safety UAS teams. 
+            Our platform focuses on three things: removing manual data entry, standardizing workflows across your fleet, 
+            and turning flight logs into structured data you can actually use—for audits, analytics, and AI-driven insights. 
+            <a href="https://www.dronelogbook.com/hp/1/innovation.html"><u>dronelogbook.com</u></a>
+          </h2>
+          <h2 class="sub-header long">Built on a secure cloud infrastructure, 
+            DroneLogbook combines powerful <b>flight-log importers, automation rules, 
+            and reporting tools</b> so your organization can manage drones, pilots, 
+            and missions from one place instead of juggling spreadsheets and disconnected apps.
+          </h2>
         </div>
       </div>
     </div>
@@ -116,8 +122,26 @@
     <div class="page-wrapper">
       <div class="content-container">
         <div class="column-left">
-          <div class="content-header">Integrations</div>
-          <div class="content-sub-header">DroneLogbook is an industry leader developing tools and importers to improve workflow. Our platform accepts telemetry files from over 50 hardware and software sources to make your workflow easier.
+          <div class="content-header">Integrations – Connect Your Drone Tech Stack</div>
+          <div class="content-sub-header">DroneLogbook is recognized as a leader in flight data 
+            import and workflow automation. Our integration engine accepts telemetry files from 
+            dozens of hardware and software sources, allowing you to keep flying with your preferred 
+            drones and ground-control stations while centralizing your records in a single system. 
+            <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
+          </div><br>
+          <div class="content-sub-header">We currently support major drone manufacturers and 
+            autopilot platforms such as DJI, Parrot, Wingtra, SenseFly, Autel, Yuneec, Wingcopter, 
+            Vantage Robotics, and more, along with leading software tools including UGCS, DroneHarmony, 
+            Sky-Drones, Simnet, Zephyr, DroneLink, Flytbase, Q Ground Control, Mission Planner, and others. 
+            <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
+            <br><br>
+            <p>Once imported, logs are normalized into a consistent format so you can:</p>
+            <ul>
+              <li>Auto-populate detailed flight records and pilot hours</li>
+              <li>Visualize GPS tracks and replay missions in 2D/3D</li>
+              <li>Feed data into BI dashboards or AI/ML analysis pipelines</li>
+              <li>Generate regulator-ready and customer-facing reports in a few clicks</li>
+            </ul>
           </div>
           <div class="ui-buttons">
             <a href="contact.php" class="ui-black">Contact Us</a>
@@ -125,9 +149,12 @@
         </div>
         <div class="column-right">
           <div class="feature">
-            <div class="feature-header">Join Our Supported Platforms List</div>
+            <div class="feature-header">Join our supported platforms list</div>
             <div class="feature-sub-header">
-              <br />If you are a drone, autopilot or ground control (app) developer and want to be integrated into DroneLogbook, send us a note and we are happy to work with you to improve your customers’ workflow.
+              <br />If you build drones, autopilots, or ground-control apps and want to offer customers seamless logging and compliance, 
+              DroneLogbook can be your integration partner. Connect through our APIs and import tools so operators can send flight data 
+              directly into their DroneLogbook environment—no CSV exports or custom spreadsheets required. 
+              <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
               <br /><br /><b>Hardware:</b> DJI, Parrot, Wingtra, SenseFly, Autel, Yuneec, Wingcopter, Vantage Robotics and more.
               <br /><b>Software:</b> UGCS, DroneHarmony, Sky-Drones, Simnet, Zephyr, DroneLink, Flytbase, Q Ground Control, Mission Planner and more.
             </div>
@@ -149,15 +176,27 @@
     <div class="page-wrapper">
       <div class="content-container">
         <div class="column-left" style="width: 100%;">
-          <div class="content-header">Modular – Configurable</div>
-          <div class="content-sub-header" style="max-width: none;">DroneLogbook provides organizations the opportunity to 
-            utilize our “Private Label” platform. This platform provides organizations 
-            with the highest level Enterprise tools for flight operations and a detailed 
-            administrative panel for operations oversight. The administrator has the ability 
-            to set rules, transfer assets and information between groups, message users, 
-            receive notifications (if flight / operations parameters are exceeded) and more. 
-            In addition, we offer the ability (as a paid option) to configure the application to 
-            suit user needs.
+          <div class="content-header">Modular & Configurable – Private Label Platform</div>
+          <div class="content-sub-header" style="max-width: none;">For enterprises, OEMs, training organizations, and agencies that need 
+            deeper control, DroneLogbook offers a Private Label (white-label) platform. This dedicated environment delivers enterprise-grade 
+            tools for flight operations, compliance, and oversight under your own branding and URL. 
+            <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
+            <br><br>
+            <p>Within the private-label admin console you can:</p>
+            <ul>
+              <li>Set operational rules and limits for flights and missions</li>
+              <li>Transfer aircraft, batteries, and data between groups or business units</li>
+              <li>Message users and teams and broadcast safety or policy updates</li>
+              <li>Receive notifications when flight or operational parameters are exceeded</li>
+              <li>Monitor compliance, documentation, and maintenance status through a central dashboard 
+                <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
+              </li>
+            </ul>
+            <p>
+              As an additional paid option, we can further configure data fields, workflows, 
+              forms, and reports so the platform mirrors your safety management system (SMS), 
+              quality processes, and internal terminology.
+            </p>
           </div>
           <div class="feature">
             <div class="ui-buttons" style="justify-content: center;">
@@ -174,16 +213,17 @@
     <div class="page-wrapper">
       <div class="content-container">
         <div class="column-left" style="width: 100%;">
-          <div class="content-header">Global</div>
-          <div class="content-sub-header" style="max-width: none;">DroneLogbook works with partners around the world to 
-            provide solutions tailored to each market. These solutions are tailored for 
-            both the local compliance needs as well as workflows.
-            <br />Our clients' data is stored on certified servers 
-            around the world to provide data security in the local market.
-            <br />Starting in 2021 we will be working to provide native 
-            language versions of our platform. Initial supported languages will be 
-            French, German, Portuguese, Spanish, and Italian. If you are interested in 
-            partnering or your local (non-English) market feel free to contact us.
+          <div class="content-header">Global – One Platform, Local Compliance</div>
+          <div class="content-sub-header" style="max-width: none;">DroneLogbook works with partners 
+            worldwide to deliver localized solutions that reflect regional regulations and operational practices.
+            Whether you are flying under FAA, EASA, CASA, Transport Canada, or other civil aviation authorities, 
+            the platform can be configured to support your compliance and reporting needs. 
+            <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
+            <br />Customer data is hosted on certified servers in multiple regions, helping organizations meet data-residency, 
+            security, and privacy expectations while still benefiting from a single global platform. DroneLogbook is also rolling out 
+            native-language versions of the application (including French, German, Portuguese, Spanish, and Italian), and we welcome 
+            discussions with partners who want to represent DroneLogbook in additional non-English markets. 
+            <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
           </div>
           <div class="feature">
             <div class="ui-buttons" style="justify-content: center;">
