--- a/features.html
+++ b/features.html
@@ -140,25 +140,25 @@
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
               <br /><b>Private Label</b>
               <ul>
-                <li>Customizable drone component lists (Motors, Propellers (CW, CCW), ESCs, etc.)</li>
-                <li>Customizable equipment list (Camera’s, Gimbles, Lidar, Battery Chargers, Cases, etc...)</li>
-                <li>(Optional) Automatically flag flights where user operated a drone with overdue inspection</li>
-                <li>(Optional) Automatically move a drone into maintenance (non operational) if overdue for inspection</li>
-                <li>(Optional) Automatically flag batteries after X flights (user-defined)</li>
-                <li>(Optional) Flag user when components or drone hull is overdue, 10 percent or 20 percent before drone/parts become overdue for inspection/maintenance follow-up.</li>
-                <li>And more than 20 other notifications...</li>
+                <li>• Customizable drone component lists (Motors, Propellers (CW, CCW), ESCs, etc.)</li>
+                <li>• Customizable equipment list (Camera’s, Gimbles, Lidar, Battery Chargers, Cases, etc...)</li>
+                <li>• (Optional) Automatically flag flights where user operated a drone with overdue inspection</li>
+                <li>• (Optional) Automatically move a drone into maintenance (non operational) if overdue for inspection</li>
+                <li>• (Optional) Automatically flag batteries after X flights (user-defined)</li>
+                <li>• (Optional) Flag user when components or drone hull is overdue, 10 percent or 20 percent before drone/parts become overdue for inspection/maintenance follow-up.</li>
+                <li>• And more than 20 other notifications...</li>
               </ul>
             </div>
 
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
               <br /><br /><b>All Servers</b>
               <ul>
-                <li>Create inspection schedules based on flights, hours or days as the trigger (2 of the 3 on one schedule)</li>
-                <li>Add serial numbers to individual components</li>
-                <li>Create unique component list for each inspection</li>
-                <li>Individual inspection and replacement schedules</li>
-                <li>Assign maintenance technician</li>
-                <li>Maintenance follow up independent of inspection schedule. Example to follow up on screws being tight after X flights</li>
+                <li>• Create inspection schedules based on flights, hours or days as the trigger (2 of the 3 on one schedule)</li>
+                <li>• Add serial numbers to individual components</li>
+                <li>• Create unique component list for each inspection</li>
+                <li>• Individual inspection and replacement schedules</li>
+                <li>• Assign maintenance technician</li>
+                <li>• Maintenance follow up independent of inspection schedule. Example to follow up on screws being tight after X flights</li>
               </ul>
             </div>
 
